하우스 키핑 매니저 _ 10_25

--- a/odata/webapp/manifest.json
+++ b/odata/webapp/manifest.json
@@ -76,7 +76,11 @@
       },
       "app": {
         "type": "sap.ui.model.json.JSONModel"
+      },
+      "all": {
+        "type": "sap.ui.model.json.JSONModel"
       }
+      
     },
     "resources": {
       "css": [
